--- a/Biometria.html
+++ b/Biometria.html
@@ -1620,13 +1620,282 @@ border-radius: 0px;
 </div>
 
 
-<div id="texto-basico" class="section level1">
-<h1>Texto basico</h1>
+<div id="introducción-al-curso-de-biometría" class="section level1">
+<h1>Introducción al curso de Biometría</h1>
+<p><strong>Instructor:</strong> Raymond L. Tremblay, PhD</p>
+<p><strong>Oficina</strong>: NL 104<br />
+<strong>Teléfono</strong>: (787) 850-9497 (dept de biología)<br />
+<strong>Coreo electronico</strong>: raymond.tremblay_at_upr_dot_edu</p>
+<hr />
+<div id="horario-de-clase" class="section level3">
+<h3>Horario de clase</h3>
+<p><strong>Presentación de temas y discusion</strong>: M, J at
+9:00-10:50am (80 mins) (NOTE: Necesita traer su laptop!)</p>
+<p><strong>Hora de consulta con Estudiantes</strong>:</p>
+<ul>
+<li>L &amp; W 9:00 - 10:30</li>
+<li>L &amp; W 1:00 - 4:30</li>
+<li>J 1:00 - 2:00</li>
+</ul>
+<hr />
+<hr />
+</div>
+<div id="libro-obligatorio." class="section level2">
+<h2>Libro obligatorio.</h2>
+<p>Aquí dos sitios donde pueden conseguir el libro</p>
+<ul>
+<li><p><a href="https://www.amazon.com/Introductory-Biological-Statistics-Fourth-Havel/dp/1478638184/ref=sr_1_1?dchild=1&amp;keywords=Introductory+Biological+Statistics&amp;qid=1594323793&amp;s=books&amp;sr=1-1">Havel
+et al - Introductory Biological Statistics, 4 edition</a></p></li>
+<li><p><a href="https://www.vitalsource.com/referral?term=9781478639282">Havel et
+al - Introductory Biological Statistics, 4 edition</a></p></li>
+</ul>
+<div id="libros-sugeridos" class="section level3">
+<h3>Libros sugeridos</h3>
+<ul>
+<li><a href="https://r4ds.had.co.nz">Garrett Grolemund, Hadley Wickham.
+R for Data Science</a> En Ingles.</li>
+<li><a href="https://es.r4ds.hadley.nz">Garrett Grolemund, Hadley
+Wickham. R para Ciencia de Datos</a> En Español.</li>
+<li><a href="https://www.amazon.com/Gráficas-Versátiles-ggplot2-Análisis-Spanish-ebook/dp/B07P2Q87H2/ref=sr_1_1?dchild=1&amp;keywords=Graficas+versatiles&amp;qid=1591404029&amp;sr=8-1">Tremblay
+y Hernández-Serrano, 2018</a>.</li>
+</ul>
+<p>• Artículos revisados por pares serán asignados para fomentar el
+método de utilizar estas herramientas en ciencias.</p>
+<hr />
+</div>
+<div id="programados" class="section level3">
+<h3>Programados</h3>
+<ul>
+<li><a href="https://cran.r-project.org/">R- free statistical
+programming language</a></li>
+<li><a href="https://rstudio.com">RStudio</a></li>
+<li>MSExcel, Numbers o Google Sheet</li>
+</ul>
+<hr />
+</div>
+<div id="prerequisitos" class="section level3">
+<h3>Prerequisitos</h3>
+<ul>
+<li>BIOL 3011-3013: Biología General y Laboratorio primer semestre</li>
+<li>BIOL 3012-3014: Biología General y Laboratorio segundo semestre</li>
+</ul>
+<hr />
+</div>
+<div id="descripción-del-curso" class="section level3">
+<h3>Descripción del curso</h3>
+<p>Estudio de diferentes técnicas estadísticas con aplicación a la
+Biología. Se enfatizará en la estadística descriptiva, análisis de
+regresiones y correlaciones, pruebas de hipótesis paramétricas y no
+paramétricas y análisis de frecuencias y varianza. Se hará énfasis en
+los supuestos de las pruebas, para seleccionar cual método estadístico
+es adecuado para el diseño experimental y la distribución de los datos.
+Además, se utilizarán las computadoras como mecanismos para facilitar y
+agilizar el cómputo y análisis estadístico.</p>
+<hr />
+</div>
+<div id="objetivos-del-curso" class="section level3">
+<h3>Objetivos del curso</h3>
+<p>Al finalizar el curso el estudiante podrá:</p>
+<ol style="list-style-type: decimal">
+<li>Discutir la importancia de la estadística en los estudios
+biológicos.</li>
+<li>Ordenar datos biológicos en forma lógica.</li>
+<li>Diferenciar entre los diferentes tipos de datos biológicos.</li>
+<li>Diferenciar los diferentes tipos de escalas biológicas.</li>
+<li>Organizar y resumir datos en forma de tablas.</li>
+<li>Confeccionar polígonos de frecuencia.</li>
+<li>Creación de gráficas para demostrar patrones.</li>
+<li>Hacer uso adecuado de las diferentes estadísticas descriptivas.</li>
+<li>Describir las diferentes medidas de tendencia central.</li>
+<li>Basado en las medidas de tendencia central, inferir algunas de las
+características de la muestra bajo estudio.</li>
+<li>Determinar cuándo se deben calcular en forma grupal las medidas de
+tendencia central y dispersión de la muestra.</li>
+<li>Calcular probabilidades en situaciones específicas.</li>
+<li>Establecer la diferencia entre distribuciones discretas y
+continuas.</li>
+<li>Formular una hipótesis nula y alterna, adecuada para una situación
+en particular.</li>
+<li>Distinguir de acuerdo al tipo de datos recolectados cuándo utilizar
+pruebas paramétricas o pruebas no paramétricas.</li>
+<li>Evaluar los supuestos de las pruebas, tal como distribución normal e
+igualdad de varianza</li>
+<li>Evaluar la hipótesis nula y determinar el grado de significación de
+esta hipótesis haciendo uso de los diferentes análisis
+estadísticos.</li>
+<li>Confeccionar tablas de contingencia y establecer homogeneidad.</li>
+<li>Determinar cuándo se debe utilizar un análisis de regresión.</li>
+<li>Calcular coeficientes de regresión.</li>
+<li>Determinar intervalos de confianza y significación de una
+regresión.</li>
+<li>Calcular el coeficiente de correlación.</li>
+<li>Realizar comparaciones entre coeficientes de correlación
+simples.</li>
+<li>Desarrollar y analizar diseños experimentales utilizando técnicas de
+muestreo y recolección de datos apropiados.</li>
+<li>Determinar el error de muestra.</li>
+<li>Conocer y aplicar las pruebas básicas en estadísticas.</li>
+<li>Evaluar situaciones experimentales y poder desarrollar un diseño
+experimental adecuado y lógico para analizar el problema y llegar a
+conclusiones.</li>
+<li>Se hará énfasis en el uso de programados estadísticos para calcular
+los índices y probar hipótesis. Los programa de computadora puede
+incluir R.</li>
+</ol>
+<hr />
+</div>
+<div id="puntuacion" class="section level3">
+<h3>Puntuacion:</h3>
+<p>Este curso sera evaluado con los siguiente items:</p>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Item</th>
+<th align="right">Valor</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Ejercicios práctico (4-6 total)</td>
+<td align="right">30%</td>
+</tr>
+<tr class="even">
+<td align="left">Pruebas cortas (una por semana)</td>
+<td align="right">15%</td>
+</tr>
+<tr class="odd">
+<td align="left">Participación</td>
+<td align="right">10%</td>
+</tr>
+<tr class="even">
+<td align="left">Examen parcial # 1 (fecha TBD)</td>
+<td align="right">15%</td>
+</tr>
+<tr class="odd">
+<td align="left">Examen parcial # 2 (fecha TBD)</td>
+<td align="right">15%</td>
+</tr>
+<tr class="even">
+<td align="left">Examen Final (fecha TBD)</td>
+<td align="right">10%</td>
+</tr>
+</tbody>
+</table>
+<p>NOTE: Escala de Notas:</p>
+<ul>
+<li>A (100 to 90)</li>
+<li>B (89 to 80)</li>
+<li>C (79 to 70)</li>
+<li>D (69 to 60)</li>
+<li>F (&lt; 60)</li>
+</ul>
+<hr />
+</div>
+<div id="examenes" class="section level3">
+<h3>Examenes:</h3>
+<p>Habrá dos examen parciales y un examen final <em>comprensivo</em>.
+Estos exámenes serán de selecciones múltiples, pareo, respuesta corta, y
+análisis de conceptos. El examen final será comprensivo (incluye todos
+los temas del semestre). En este examen final se hará énfasis en la
+comprensión y aplicaciones de los supuestos de las pruebas y la
+capacidad de seleccionar la prueba correcta basado en el diseño
+experimental y los supuestos.</p>
+<p><span style="color: red;">Si el examen es vitrual es obligatorio
+tener la camera prendida durante <strong>todo el exámen</strong>. No es
+permitido usar el celular, Ud. tendrá que demostrar que el celular este
+detrás de uds antes de comenzar el examen</span></p>
+<hr />
+</div>
+<div id="conferencias" class="section level3">
+<h3>Conferencias</h3>
+<p>En la clase las notas serán basado primeramente en la participación y
+algunas pruebas cortas. Su participación es esencial para el aprendizaje
+(y para un ambiente positivo). Aprender <em>NO</em> es un proceso
+pasivo: los estudiantes deben participar haciendo preguntas y discutir
+el material con su conocimiento anterior (Su bagaje de
+conocimiento).</p>
+<hr />
+</div>
+<div id="ejercicios" class="section level3">
+<h3>Ejercicios</h3>
+<p>Los ejercicios están enfocado en la aplicación de conceptos y métodos
+discutido en la clase y solución de problemas. Se hará un esfuerza de
+usar datos reales para demostrar como trabajar con los análisis, tablas,
+y gráficos en R, RStudio y RMarkdown. Típicamente, tendrán solamente una
+semana para hacer los ejercicios y entregarlos en formato
+<em>.html</em>.</p>
+<hr />
+</div>
+<div id="faltar-a-clase-y-examen" class="section level3">
+<h3>Faltar a clase y examen:</h3>
+<p><em>Los trabajos cortos y pruebas cortas NO se reponen</em>. Si falta
+a la clase es su responsabilidad hablar con los otros estudiantes para
+saber lo que se discutió en la clase. Los examen se reponen solamente
+por una escusa valida.</p>
+<hr />
+</div>
+<div id="derechos-de-estudiantes-con-impedimentos" class="section level3">
+<h3>Derechos de Estudiantes con Impedimentos</h3>
+<p>La UPR-Humacao cumple con las leyes ADA (Americans with Disabilities
+Act) y 51 (Servicios Educativos Integrales para Personas con
+Impedimentos) para garantizar igualdad en el acceso a la educación y
+servicios. Estudiantes con impedimentos: informe al (la) profesor(a) de
+cada curso sobre sus necesidades especiales y/o de acomodo razonable
+para el curso, en la tarjeta de información de la primera semana y
+visite la Oficina de Servicios para la Población con Impedimentos
+(SERPI) a la brevedad posible. Se mantendrá la confidencialidad.</p>
+<hr />
+</div>
+<div id="integridad-academica" class="section level3">
+<h3>Integridad academica</h3>
+<p>La Universidad de Puerto Rico promueve los más altos estándares de
+integridad académica y científica. El Artículo 6.2 del Reglamento
+General de Estudiantes de la Universidad de Puerto Rico (Certificación
+Núm. 13, 2009-2010, de la Junta de Síndicos) establece que <span style="color: red;">la deshonestidad académica incluye, pero no se
+limita a: acciones fraudulentas, la obtención de notas o grados
+académicos valiéndose de falsas o fraudulentas simulaciones, copiar
+total o parcialmente la labor académica de otra persona, plagiar total o
+parcialmente el trabajo de otra persona, copiar total o parcialmente las
+respuestas de otra persona a las preguntas de un examen, haciendo o
+consiguiendo que otro tome en su nombre cualquier prueba o examen oral o
+escrito, así como la ayuda o facilitación para que otra persona incurra
+en la referida conducta</span>. Cualquiera de estas acciones estará
+sujeta a sanciones disciplinarias en conformidad con el procedimiento
+disciplinario establecido en el Reglamento General de Estudiantes de la
+UPR vigente.</p>
+<hr />
+</div>
+<div id="comentario-sobre-grabar-videos-yo-audio-de-las-clases" class="section level3">
+<h3>Comentario sobre grabar videos y/o audio de las clases</h3>
+<p>Los estudiantes no PUEDEN grabar la clase por forma de video o audio
+sin el permiso del profesor. Algunos estudiantes con necesidades
+especiales pueden hablar con el profesor para pedir el permiso. La
+solicitud y aprobación del permiso tiene que ser por escrito (por
+ejemplo por email).</p>
+<hr />
+</div>
+<div id="espacio-libre-de-acoso-sexual" class="section level3">
+<h3>Espacio libre de acoso sexual</h3>
+<p>La Universidad de Puerto Rico prohíbe el descrimen por razón de sexo
+y género en todas sus modalidades, incluyendo el hostigamiento sexual.
+Según la Política Institucional contra el hostigamiento sexual, en la
+Universidad de Puerto Rico, Cert. Núm. 130 (2014-2015) de la Junta de
+Gobierno, si un(a) estudiante está siendo o fue afectado por conductas
+relacionadas a hostigamiento sexual, puede acudir ante la Oficina del
+Procurador Estudiantil, el Decanato de Estudiantes o el Coordinador de
+Cumplimiento con Título IX para una orientación o presentar una
+querella.</p>
+<hr />
+</div>
+<div id="protocolo-de-la-clase" class="section level3">
+<h3>Protocolo de la Clase</h3>
+<p>Los teléfonos mobiles serán apagado durante la clase. Si necesita una
+calculadora traerla al salón. El teléfono no debería esta visible
+durante la clase al menos que pide permiso al instructor. Recuerda que
+que se usara computadoras portátiles en cada sesión.</p>
 <!--chapter:end:index.Rmd-->
 </div>
-<div id="introduccion-al-curso-de-biometria" class="section level1">
-<h1>Introduccion al curso de Biometria</h1>
-<!--chapter:end:02-Intro.Rmd-->
+</div>
 </div>
 <div id="introducción-a-la-biometria" class="section level1">
 <h1>Introducción a la Biometria</h1>
@@ -2011,9 +2280,13 @@ distribución <strong>Poisson</strong> (veremos más tarde).<br />
 </ul></li>
 </ul>
 <hr />
+<!--chapter:end:02-Intro.Rmd-->
+</div>
+</div>
+</div>
+<div id="some-text" class="section level1">
+<h1>some text</h1>
 <!--chapter:end:03-T2.Rmd-->
-</div>
-</div>
 </div>
 <div id="proximo-capitulo" class="section level1">
 <h1>Proximo capitulo</h1>
